feat: multimodule project, latest dependencies